# CudaMiner

./: .cproject  .gitignore  .project  ASTROMINER.cbp  AstroMiner  AstroMiner.cpp  AstroMiner.h  CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake
common/: miner.cpp  miner.h  miningdata.h  timer.cpp  timer.h  utils.cpp  utils.h
cpu/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  cpuminer.cpp  cpuminer.h
cuda/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.original  Makefile  cmake_install.cmake  cudaHeader.h  deviceQuery.cu  deviceQuery.h  gpuminer.cu  gpuminer.h
input_files/: BX15.26BY11.48A100SS1.39_bin  BX15.26BY11.48A100SS1.39_humanreadable  BX20_BY20_A20_OPON_bin  BX20_BY20_A20_OPON_humanreadable  BX5_BY5_AC50_OPON_SS0.5_bin  BX5_BY5_AC50_OPON_SS0.5_humanreadable
inputfilemanager/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  inputfilemanager.cpp  inputfilemanager.h
inputfilemanager/reader/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeListsExec.txt  CMakeListsLib.txt  Makefile  README  cmake_install.cmake  inputFileReader  inputfilereader.cpp  inputfilereader.h  inputfilereaderexec.cpp  readinputFile
inputfilemanager/writer/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gridsizeincreaser.sh  inputFileCreator  inputfilewriter.cpp  inputfilewriter.h  mineralincreaser.sh  output.txt_bin  output.txt_humanreadable
inputfilemanager/writer-build/: CMakeCache.txt  INPUTFILEWRITER.cbp  Makefile  cmake_install.cmake  inputFileWriter
report/: Assignment.tex
